Added 'Last Transfer' date in torrents details: list, modal, UI column settings
Note: Requires rTorrent configuration to save d.custom.last_xfer:

```
method.insert.value = pyro.last_xfer.min_rate, 5000

method.insert = pyro._last_xfer_check_min_rate, simple|private,\
    "greater=argument.0=,pyro.last_xfer.min_rate="
method.insert = pyro._last_xfer_update, simple|private,\
    "d.custom.set=last_xfer,$cat=$system.time= ; branch=argument.0=,d.save_resume="
method.insert = d.last_xfer.is_active, simple,\
    "or={pyro._last_xfer_check_min_rate=$d.up.rate=,pyro._last_xfer_check_min_rate=$d.down.rate=}"
method.insert = d.timestamp.last_xfer, simple, "if=$d.last_xfer.is_active=,$cat=$system.time=,$d.custom=last_xfer"

schedule2 = pyro_update_last_xfer, 33, 17,\
    "d.multicall2=active,\"branch=$d.last_xfer.is_active=,pyro._last_xfer_update=\""
```

--- a/client/src/javascript/i18n/compiled/fr.json
+++ b/client/src/javascript/i18n/compiled/fr.json
@@ -1989,6 +1989,12 @@
       "value": "Définir l'Emplacement de Téléchargement"
     }
   ],
+  "torrents.properties.last_xfer": [
+    {
+      "type": 0,
+      "value": "Dernier transfert"
+    }
+  ],
   "torrents.properties.base.path": [
     {
       "type": 0,
