--- a/client/src/javascript/i18n/translations/fr.json
+++ b/client/src/javascript/i18n/translations/fr.json
@@ -226,6 +226,7 @@
   "torrents.details.general.connected": "{connected} connectés sur {total}",
   "torrents.details.general.date.added": "Ajouté",
   "torrents.details.general.date.created": "Création",
+  "torrents.details.general.last_xfer": "Dernier transfert",
   "torrents.details.general.downloaded": "Téléchargé",
   "torrents.details.general.free.disk.space": "Espace Disque Libre",
   "torrents.details.general.hash": "Hachage",
@@ -277,6 +278,7 @@
   "torrents.move.check_hash.label": "Vérifier le hachage",
   "torrents.move.heading": "Définir l'Emplacement de Téléchargement",
   "torrents.properties.date.added": "Date d'Ajout",
+  "torrents.properties.last_xfer": "Dernier transfert",
   "torrents.properties.base.path": "Chemin absolu",
   "torrents.properties.comment": "Commentaire",
   "torrents.properties.creation.date": "Date de Création",
