--- a/client/src/javascript/i18n/translations/af.json
+++ b/client/src/javascript/i18n/translations/af.json
@@ -226,6 +226,7 @@
   "torrents.details.general.connected": "{connected} connected of {total}",
   "torrents.details.general.date.added": "Added",
   "torrents.details.general.date.created": "Creation Date",
+  "torrents.details.general.last_xfer": "Last Transfer",
   "torrents.details.general.downloaded": "Downloaded",
   "torrents.details.general.free.disk.space": "Free Disk Space",
   "torrents.details.general.hash": "Hash",
@@ -277,6 +278,7 @@
   "torrents.move.check_hash.label": "Check hash",
   "torrents.move.heading": "Set Torrent Location",
   "torrents.properties.date.added": "Added",
+  "torrents.properties.last_xfer": "Last Transfer",
   "torrents.properties.base.path": "Base Path",
   "torrents.properties.comment": "Comment",
   "torrents.properties.creation.date": "Creation Date",
